--- a/src/index.css
+++ b/src/index.css
@@ -10,4 +10,6 @@ body {
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
+    /* font-family: 'Sacramento', cursive;
+    font-family: 'Open Sans', sans-serif; */
 }
