Add error message for invalid requests

--- a/src/App.css
+++ b/src/App.css
@@ -57,7 +57,7 @@
 }
 
 .image {
-  min-height: 10rem;
+  min-height: 30rem;
   width: 100%;
 }
 
@@ -79,7 +79,8 @@
 }
 
 .footer {
-  padding-top: 3rem;
+  border-top: 1px solid #001a33;
+  padding-top: 2.5rem;
 }
 
 .footer a {
